--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:description" content="Paraffin Website">
 <meta property="og:image" content="image/paraffin blue light.png" />
 <meta charset="utf-8" />
-<link rel="icon" type="image/png" href="./images/.png" />
+<link rel="icon" type="image/png" href="./images/paraffin blue light.png" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 </head>
     <script type="text/javascript">
