--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta name="twitter:card" value="summary">
 <meta name="twitter:title" content="Paraffin">
 <meta name="twitter:description" content="Paraffin Website">
-<meta name="twitter:image" content="/image/paraffin blue light.png">
+<meta name="twitter:image" content="/image/paraffin.png">
 <meta property="og:title" content="Paraffin" />
 <meta property="og:url" content="https://parsafiroozi.github.io/" />
 <meta property="og:description" content="Paraffin Website">
-<meta property="og:image" content="image/paraffin blue light.png" />
+<meta property="og:image" content="image/paraffin.png" />
 <meta charset="utf-8" />
-<link rel="icon" type="image/png" href="./images/paraffin blue light.png" />
+<link rel="icon" type="image/png" href="./images/paraffin.png" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 </head>
     <script type="text/javascript">
