--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Hacked By Paraffin </title>
+<title>Hacked By Paraffin2 </title>
 <meta name="theme-color" content="#7187dd">
 <meta name="twitter:card" value="summary">
 <meta name="twitter:title" content="Paraffin">
