--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <html>
-<head>
-<title>Hacked By Paraffin2 </title>
-<meta name="theme-color" content="#7187dd">
-<meta name="twitter:card" value="summary">
-<meta name="twitter:title" content="Paraffin">
-<meta name="twitter:description" content="Paraffin Website">
-<meta name="twitter:image" content="/image/paraffin.png">
-<meta property="og:title" content="Paraffin" />
-<meta property="og:url" content="https://parsafiroozi.github.io/" />
-<meta property="og:description" content="Paraffin Website">
-<meta property="og:image" content="image/paraffin.png" />
-<meta charset="utf-8" />
-<link rel="icon" type="image/png" href="./images/paraffin.png" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-</head>
+        <html lang="fa-ir">
+                <head>
+                <title>Paraffin Team</title>
+                <link rel="icon" type="image/png" href="./image/paraffin.png" />
+                        <meta name="theme-color" content="#a8dfff">
+                        <meta name="twitter:card" value="summary">
+                        <meta name="twitter:title" content="Paraffin">
+                        <meta name="twitter:description" content="Paraffin Team">
+                        <meta name="twitter:image" content="./image/paraffin.png">
+                        <meta property="og:title" content="Paraffin" />
+                        <meta property="og:url" content="https://parsafiroozi.github.io/" />
+                        <meta property="og:description" content="Paraffin Team">
+                        <meta property="og:image" content="./image/paraffin.png" />
+                        <meta charset="utf-8" />
+                        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+                </head>
     <script type="text/javascript">
             var PsychoStatus=
     {
@@ -618,7 +619,7 @@ span.c1 {text-decoration: underline}
 <table width=100% height=100%><td align=center><br>
 <div id=bar style="position: fixed; width: 100%; bottom: 0px; font-family: Tahoma; height: 20px; color: white; font-size: 13px; left: 0px; border-top: 2px solid lightblue; padding: 30px; background-color: #000"><B>Paraffin Team</B></div>
 
-	<div align="center"><embed src="/Music.mp3" width="0px" height="0px" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" quality="High"><div class="img2"></div>
+	<div align="center"><embed src="./music/Music.mp3" width="0px" height="0px" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" quality="High"><div class="img2"></div>
   
 </body>
 </html>
