--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
                         <meta name="twitter:card" value="summary">
                         <meta name="twitter:title" content="Paraffin">
                         <meta name="twitter:description" content="Paraffin Team">
-                        <meta name="twitter:image" content="./image/paraffin.png">
+                        <meta name="twitter:image" content="https://i.ibb.co/MGCzgXx/paraffin-blue-light.png">
                         <meta property="og:title" content="Paraffin" />
                         <meta property="og:url" content="https://parsafiroozi.github.io/" />
                         <meta property="og:description" content="Paraffin Team">
-                        <meta property="og:image" content="./image/paraffin.png" />
+                        <meta property="og:image" content="https://i.ibb.co/MGCzgXx/paraffin-blue-light.png" />
                         <meta charset="utf-8" />
                         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
                 </head>
@@ -607,9 +607,8 @@ span.c1 {text-decoration: underline}
         که از اونها بدم میاد
       </h2>
       <h2 class="frame-10">
-        <span>آره درسته.</span> <span>Paraffin .</span> <span>هیسسسس صدایت را میشنوم</span><span><br>
          <a title="" href="https://www.instagram.com/parsa._.firoozi" target="_blank">Paraffin IG</a></span>
-      </h2><a class="pc-circle-link" href="javascript:history.go(0)">دیدن اطلاعات خود</a>
+      </h2><a class="pc-circle-link" href="javascript:history.go(0)">ReTry</a>
     </div> <script type="text/javascript">
             PsychoStatus.useTitle = true;
                 PsychoStatus.load(10, 120,
