--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         <html lang="fa-ir">
                 <head>
                 <title>PARAFFIN</title>
-                <link rel="icon" type="image/png" href="./image/PARAFFIN.png" />
+                <link rel="icon" type="image/png" href="https://i.ibb.co/MGCzgXx/PARAFFIN-blue-light.png" />
                         <meta name="theme-color" content="#a8dfff">
                         <meta name="twitter:card" value="summary">
                         <meta name="twitter:title" content="PARAFFIN">
@@ -227,7 +227,7 @@
 
         return info1;
       };
-      
+
         let infoValue1 = await getInfo1();
 </script>
 
