--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
                         <meta name="theme-color" content="#a8dfff">
                         <meta name="twitter:card" value="summary">
                         <meta name="twitter:title" content="PARAFFIN">
-                        <meta name="twitter:description" content="PARAFFIN Team">
+                        <meta name="twitter:description" content="PARAFFIN">
                         <meta name="twitter:image" content="https://i.ibb.co/MGCzgXx/PARAFFIN-blue-light.png">
                         <meta property="og:title" content="PARAFFIN" />
                         <meta property="og:url" content="https://parsafiroozi.github.io/" />
-                        <meta property="og:description" content="PARAFFIN Team">
+                        <meta property="og:description" content="PARAFFIN">
                         <meta property="og:image" content="https://i.ibb.co/MGCzgXx/PARAFFIN-blue-light.png" />
                         <meta charset="utf-8" />
                         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -647,9 +647,8 @@ span.c1 {text-decoration: underline}
     </script>
 <body><center>
 <table width=100% height=100%><td align=center><br>
-<div id=bar style="position: fixed; width: 100%; bottom: 0px; font-family: Tahoma; height: 20px; color: white; font-size: 13px; left: 0px; border-top: 2px solid lightblue; padding: 30px; background-color: #000"><B>PARAFFIN Team</B></div>
+<div id=bar style="position: fixed; width: 100%; bottom: 0px; font-family: Tahoma; height: 20px; color: white; font-size: 13px; left: 0px; border-top: 2px solid lightblue; padding: 30px; background-color: #000"><B>PARAFFIN</B></div>
 
-	<div align="center"><embed src="./music/Music.mp3" width="0px" height="0px" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" quality="High"><div class="img2"></div>
   
 </body>
 
