--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
                 <head>
                 <title>PARAFFIN</title>
                 <link rel="icon" type="image/png" href="https://i.ibb.co/MGCzgXx/PARAFFIN-blue-light.png" />
-                        <meta name="theme-color" content="#a8dfff">
-                        <meta name="twitter:card" value="summary">
-                        <meta name="twitter:title" content="PARAFFIN">
-                        <meta name="twitter:description" content="PARAFFIN">
-                        <meta name="twitter:image" content="https://i.ibb.co/MGCzgXx/PARAFFIN-blue-light.png">
-                        <meta property="og:title" content="PARAFFIN" />
-                        <meta property="og:url" content="https://parsafiroozi.github.io/" />
-                        <meta property="og:description" content="PARAFFIN">
-                        <meta property="og:image" content="https://i.ibb.co/MGCzgXx/PARAFFIN-blue-light.png" />
-                        <meta charset="utf-8" />
-                        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+                        	<meta name="theme-color" content="#bd2525">
+	<meta name="twitter:card" value="summary">
+	<meta name="twitter:title" content="Paraffin">
+	<meta name="twitter:description" content="آموزش 0 تا 100 برنامه نویسی و طراحی گرافیک">
+	<meta name="twitter:image" content="https://media.discordapp.net/attachments/799297746217467944/801075642275463168/paraffinred.png">
+	<meta property="og:title" content="Paraffin" />
+	<meta property="og:url" content="https://paraffin-team.ir" />
+	<meta property="og:description" content="آموزش 0 تا 100 برنامه نویسی و طراحی گرافیک">
+	<meta property="og:image" content="https://media.discordapp.net/attachments/799297746217467944/801075642275463168/paraffinred.png" />
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
                 </head>
 
                 <audio src="./Music2.mp3" autoplay></audio>
